--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,12 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Detail"
+        android:text="@string/detail"
         android:layout_marginBottom="40dp"/>
 
     <ImageView
         android:id="@+id/detailImg"
-        android:layout_centerVertical="true"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
@@ -27,7 +26,7 @@
 
     <TextView
         style="@style/TextAppearance.MdcTypographyStyles.Headline6"
-        android:text="Judul Film Disini"
+        android:text="@string/judul_film_disini"
         android:id="@+id/detailTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="05/05/2023" />
+        android:text="@string/_05_05_2023" />
 
     <TextView
         style="@style/TextAppearance.MdcTypographyStyles.Body2"
@@ -50,8 +49,18 @@
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis eros nulla, porttitor scelerisque purus feugiat sed." />
+        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_phasellus_facilisis_eros_nulla_porttitor_scelerisque_purus_feugiat_sed" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/favfillicn"/>
+    </RelativeLayout>
 
 
 </LinearLayout>
