--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".view.HomeActivity"
     android:orientation="vertical"
-    android:layout_margin="20dp">
+    android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/homeTv"/>
+        android:id="@+id/homeTv"
+        tools:ignore="RelativeOverlap" />
 
     <ImageView
         android:id="@+id/homeProfile"
@@ -19,6 +20,14 @@
         android:layout_height="wrap_content"
         android:src="@drawable/profileicn"
         android:layout_alignParentEnd="true"/>
+
+    <ImageView
+        android:id="@+id/homeFavorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/favoriteicn"
+        android:layout_marginEnd="10dp"
+        android:layout_toStartOf="@+id/homeProfile" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/homeRv"
